--- a/gst-plugins-bad/po/nl.po
+++ b/gst-plugins-bad/po/nl.po
@@ -1,4 +1,4 @@
-# translation of gst-plugins-bad-0.10.9.3.po to Dutch
+# translation of gst-plugins-bad-0.10.13.2.nl.po to Dutch
 # translation of gst-plugins-bad to Dutch
 # Copyright (C) 2004, 2007, 2008, 2009 Free Software Foundation, Inc.
 #
@@ -6,10 +6,10 @@
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 0.10.9.3\n"
+"Project-Id-Version: gst-plugins-bad 0.10.13.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-11 17:42+0100\n"
-"PO-Revision-Date: 2009-01-23 18:06+0100\n"
+"POT-Creation-Date: 2009-08-14 18:11+0100\n"
+"PO-Revision-Date: 2009-08-13 00:06+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -75,11 +75,10 @@ msgstr ""
 "het Open Soundsysteem wordt niet ondersteund door dit element."
 
 msgid "Volume"
-msgstr ""
+msgstr "Volume"
 
-#, fuzzy
 msgid "Master"
-msgstr "Snel"
+msgstr "Master"
 
 msgid "Front"
 msgstr "Voorzijde"
@@ -90,188 +89,176 @@ msgstr "Achterzijde"
 msgid "Headphones"
 msgstr "Hoofdtelefoon"
 
-#, fuzzy
 msgid "Center"
-msgstr "Midden / LFE"
+msgstr "Midden"
 
 msgid "LFE"
-msgstr ""
+msgstr "LFE"
 
-#, fuzzy
 msgid "Surround"
-msgstr "Surround geluid"
+msgstr "Surround"
 
 msgid "Side"
 msgstr "Zijkant"
 
 msgid "Built-in Speaker"
-msgstr ""
+msgstr "Ingebouwde luidspreker"
 
 msgid "AUX 1 Out"
-msgstr ""
+msgstr "AUX 1-out"
 
 msgid "AUX 2 Out"
-msgstr ""
+msgstr "AUX 2-out"
 
 msgid "AUX Out"
-msgstr ""
+msgstr "AUX-out"
 
 msgid "Bass"
-msgstr ""
+msgstr "Lage tonen"
 
 msgid "Treble"
-msgstr ""
+msgstr "Hoge tonen"
 
 msgid "3D Depth"
-msgstr ""
+msgstr "3D diepte"
 
 msgid "3D Center"
-msgstr ""
+msgstr "3D midden"
 
 msgid "3D Enhance"
-msgstr ""
+msgstr "3D verbeteren"
 
-#, fuzzy
 msgid "Telephone"
-msgstr "Hoofdtelefoon"
+msgstr "Telefoon"
 
 msgid "Microphone"
 msgstr "Microfoon"
 
 msgid "Line Out"
-msgstr ""
+msgstr "Line-out"
 
-#, fuzzy
 msgid "Line In"
-msgstr "Lijn-in"
+msgstr "Line-in"
 
 msgid "Internal CD"
-msgstr ""
+msgstr "Interne cd"
 
 msgid "Video In"
-msgstr ""
+msgstr "Video-in"
 
 msgid "AUX 1 In"
-msgstr ""
+msgstr "AUX 1-in"
 
 msgid "AUX 2 In"
-msgstr ""
+msgstr "AUX 2-in"
 
 msgid "AUX In"
-msgstr ""
+msgstr "AUX-in"
 
 msgid "PCM"
 msgstr "PCM"
 
 msgid "Record Gain"
-msgstr ""
+msgstr "Opnameversterking"
 
 msgid "Output Gain"
-msgstr ""
+msgstr "Uitgangversterking"
 
-#, fuzzy
 msgid "Microphone Boost"
-msgstr "Microfoon"
+msgstr "Microfoon-boost"
 
 msgid "Loopback"
-msgstr ""
+msgstr "Terugkoppeling"
 
 msgid "Diagnostic"
-msgstr ""
+msgstr "Diagnostiek"
 
 msgid "Bass Boost"
-msgstr ""
+msgstr "Lage tonen-boost"
 
 msgid "Playback Ports"
-msgstr ""
+msgstr "Afspeelpoorten"
 
 msgid "Input"
 msgstr "Invoer"
 
 msgid "Record Source"
-msgstr ""
+msgstr "Opnamebron"
 
 msgid "Monitor Source"
-msgstr ""
+msgstr "Monitorbron"
 
 msgid "Keyboard Beep"
-msgstr ""
+msgstr "Toetsenbordpiep"
 
 msgid "Monitor"
-msgstr ""
+msgstr "Monitor"
 
 msgid "Simulate Stereo"
-msgstr ""
+msgstr "Stereo simuleren"
 
 msgid "Stereo"
 msgstr "Stereo"
 
-#, fuzzy
 msgid "Surround Sound"
 msgstr "Surround geluid"
 
-#, fuzzy
 msgid "Microphone Gain"
-msgstr "Microfoon"
+msgstr "Microfoonversterking"
 
 msgid "Speaker Source"
-msgstr ""
+msgstr "Luidsprekerbron"
 
-#, fuzzy
 msgid "Microphone Source"
-msgstr "Microfoon"
+msgstr "Microfoonbron"
 
 msgid "Jack"
-msgstr ""
+msgstr "Jack"
 
 msgid "Center / LFE"
 msgstr "Midden / LFE"
 
-#, fuzzy
 msgid "Stereo Mix"
-msgstr "Stereo"
+msgstr "Stereo mix"
 
 msgid "Mono Mix"
-msgstr ""
+msgstr "Mono mix"
 
-#, fuzzy
 msgid "Input Mix"
-msgstr "Invoermix"
+msgstr "Invoer mix"
 
 msgid "SPDIF In"
-msgstr ""
+msgstr "SPDIF-in"
 
 msgid "SPDIF Out"
-msgstr ""
+msgstr "SPDIF-out"
 
-#, fuzzy
 msgid "Microphone 1"
-msgstr "Microfoon"
+msgstr "Microfoon 1"
 
-#, fuzzy
 msgid "Microphone 2"
-msgstr "Microfoon"
+msgstr "Microfoon 2"
 
 msgid "Digital Out"
-msgstr ""
+msgstr "Digitaal-out"
 
 msgid "Digital In"
-msgstr ""
+msgstr "Digitaal-in"
 
 msgid "HDMI"
-msgstr ""
+msgstr "HDMI"
 
 msgid "Modem"
-msgstr ""
+msgstr "Modem"
 
 msgid "Handset"
-msgstr ""
+msgstr "Mobieltje"
 
 msgid "Other"
-msgstr ""
+msgstr "Overige"
 
 msgid "None"
-msgstr ""
+msgstr "Geen"
 
 msgid "On"
 msgstr "Aan"
@@ -280,13 +267,13 @@ msgid "Off"
 msgstr "Uit"
 
 msgid "Mute"
-msgstr ""
+msgstr "Gedempt"
 
 msgid "Fast"
 msgstr "Snel"
 
 msgid "Very Low"
-msgstr ""
+msgstr "Zeer laag"
 
 msgid "Low"
 msgstr "Laag"
@@ -297,126 +284,100 @@ msgstr "Gemiddeld"
 msgid "High"
 msgstr "Hoog"
 
-#, fuzzy
 msgid "Very High"
-msgstr "Erg hoog"
+msgstr "Zeer hoog"
 
 msgid "Production"
 msgstr "Productie"
 
-#, fuzzy
 msgid "Front Panel Microphone"
 msgstr "Microfoon in frontpaneel"
 
-#, fuzzy
 msgid "Front Panel Line In"
 msgstr "Lijn-in in frontpaneel"
 
-#, fuzzy
 msgid "Front Panel Headphones"
 msgstr "Hoofdtelefoon in frontpaneel"
 
-#, fuzzy
 msgid "Front Panel Line Out"
 msgstr "Lijn-in in frontpaneel"
 
-#, fuzzy
 msgid "Green Connector"
 msgstr "Groene connector"
 
-#, fuzzy
 msgid "Pink Connector"
 msgstr "Roze connector"
 
-#, fuzzy
 msgid "Blue Connector"
 msgstr "Blauwe connector"
 
-#, fuzzy
 msgid "White Connector"
 msgstr "Witte connector"
 
-#, fuzzy
 msgid "Black Connector"
 msgstr "Zwarte connector"
 
-#, fuzzy
 msgid "Gray Connector"
 msgstr "Grijze connector"
 
-#, fuzzy
 msgid "Orange Connector"
 msgstr "Oranje connector"
 
-#, fuzzy
 msgid "Red Connector"
 msgstr "Rode connector"
 
-#, fuzzy
 msgid "Yellow Connector"
 msgstr "Gele connector"
 
-#, fuzzy
 msgid "Green Front Panel Connector"
 msgstr "Groene connector in frontpaneel"
 
-#, fuzzy
 msgid "Pink Front Panel Connector"
 msgstr "Roze connector in frontpaneel"
 
-#, fuzzy
 msgid "Blue Front Panel Connector"
 msgstr "Blauwe connector in frontpaneel"
 
-#, fuzzy
 msgid "White Front Panel Connector"
 msgstr "Witte connector in frontpaneel"
 
-#, fuzzy
 msgid "Black Front Panel Connector"
 msgstr "Zwarte connector in frontpaneel"
 
-#, fuzzy
 msgid "Gray Front Panel Connector"
 msgstr "Grijze connector in frontpaneel"
 
-#, fuzzy
 msgid "Orange Front Panel Connector"
 msgstr "Oranje connector in frontpaneel"
 
-#, fuzzy
 msgid "Red Front Panel Connector"
 msgstr "Rode connector in frontpaneel"
 
-#, fuzzy
 msgid "Yellow Front Panel Connector"
 msgstr "Gele connector in frontpaneel"
 
 msgid "Spread Output"
-msgstr ""
+msgstr "Spread Output"
 
 msgid "Downmix"
-msgstr ""
+msgstr "Downmix"
 
-#, fuzzy
 msgid "Virtual Mixer Input"
 msgstr "Virtuele mixer-invoer"
 
-#, fuzzy
 msgid "Virtual Mixer Output"
 msgstr "Virtuele mixer-uitvoer"
 
-#, fuzzy
 msgid "Virtual Mixer Channels"
-msgstr "Virtuele mixer-invoer"
+msgstr "Virtuele mixer-kanalen"
 
 #, c-format
 msgid "%s Function"
-msgstr ""
+msgstr "%s-functie"
 
 #, c-format
 msgid "%s %d"
-msgstr ""
+msgstr "%s %d"
 
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
@@ -453,84 +414,3 @@ msgstr "Opnemen wordt door dit audio-apparaat niet ondersteund."
 
 msgid "Error recording from audio device."
 msgstr "Fout bij opnemen met dit audio-apparaat."
-
-#~ msgid "Failed to configure TwoLAME encoder. Check your encoding parameters."
-#~ msgstr ""
-#~ "Kan de TwoLAME-encoder niet configureren. Controleer uw "
-#~ "encodingparameters."
-
-#~ msgid ""
-#~ "The requested bitrate %d kbit/s for property '%s' is not allowed. The "
-#~ "bitrate was changed to %d kbit/s."
-#~ msgstr ""
-#~ "De gevraagde bitsnelheid %d kbits/s voor eigenschap '%s' is niet "
-#~ "toegestaan. De bitsnelheid is gewijzigd in %d kbits/s."
-
-#~ msgid "PCM 1"
-#~ msgstr "PCM 1"
-
-#~ msgid "PCM 2"
-#~ msgstr "PCM 2"
-
-#~ msgid "PCM 3"
-#~ msgstr "PCM 3"
-
-#~ msgid "PCM 4"
-#~ msgstr "PCM 4"
-
-#~ msgid "Green connector function"
-#~ msgstr "Functie van groene connector"
-
-#~ msgid "Green front panel connector function"
-#~ msgstr "Functie van groene connector in frontpaneel"
-
-#~ msgid "Pink connector function"
-#~ msgstr "Functie van roze connector"
-
-#~ msgid "Pink front panel connector function"
-#~ msgstr "Functie van roze connector in frontpaneel"
-
-#~ msgid "Blue connector function"
-#~ msgstr "Functie van blauwe connector"
-
-#~ msgid "Blue front panel connector function"
-#~ msgstr "Functie van blauwe connector in frontpaneel"
-
-#~ msgid "Orange connector function"
-#~ msgstr "Functie van oranje connector"
-
-#~ msgid "Orange front panel connector function"
-#~ msgstr "Functie van oranje connector in frontpaneel"
-
-#~ msgid "Black connector function"
-#~ msgstr "Functie van zwarte connector"
-
-#~ msgid "Black front panel connector function"
-#~ msgstr "Functie van zwarte connector in frontpaneel"
-
-#~ msgid "Gray connector function"
-#~ msgstr "Functie van grijze connector"
-
-#~ msgid "Gray front panel connector function"
-#~ msgstr "Functie van grijze connector in frontpaneel"
-
-#~ msgid "White connector function"
-#~ msgstr "Functie van witte connector"
-
-#~ msgid "White front panel connector function"
-#~ msgstr "Functie van witte connector in frontpaneel"
-
-#~ msgid "Red connector function"
-#~ msgstr "Functie van rode connector"
-
-#~ msgid "Red front panel connector function"
-#~ msgstr "Functie van rode connector in frontpaneel"
-
-#~ msgid "Yellow connector function"
-#~ msgstr "Functie van gele connector"
-
-#~ msgid "Yellow front panel connector function"
-#~ msgstr "Functie van gele connector in frontpaneel"
-
-#~ msgid "Virtual mixer channel configuration"
-#~ msgstr "Kanaalconfiguratie van virtuele mixer "
